@startuml

title __TIME's Class Diagram__\n

  package taskman {
    package taskman.backend {
      package taskman.backend.time {
        class AvailabilityPeriod {
            - startTime : LocalTime
            - endTime : LocalTime
            + AvailabilityPeriod()
            + getStartTime()
            - setStartTime()
            + getEndTime()
            - setEndTime()
            + canHaveAsEndTime()
            + accept()
        }
      }
    }
  }
  

  package taskman {
    package taskman.backend {
      package taskman.backend.time {
        class Clock {
            - time : LocalDateTime
            + getTime()
            + updateSystemTime()
            + accept()
        }
      }
    }
  }
  

  package taskman {
    package taskman.backend {
      package taskman.backend.time {
        class TimeParser {
            {static} - DATE_TIME_FORMATTER : DateTimeFormatter
            {static} + convertLocalDateTimeToString()
            {static} + convertStringToLocalDateTime()
        }
      }
    }
  }
  

  package taskman {
    package taskman.backend {
      package taskman.backend.time {
        class TimeSpan {
            - startTime : LocalDateTime
            - endTime : LocalDateTime
            + TimeSpan()
            + getStartTime()
            - setStartTime()
            + getEndTime()
            - setEndTime()
            + canHaveAsEndTime()
            + accept()
        }
      }
    }
  }
  

  AvailabilityPeriod -up-|> Entity
  Clock -up-|> Entity
  TimeSpan -up-|> Entity


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
